# sales-nest-document-upload

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  pr-validate.yml
docs/: PARTITIONED_DOC_PIPELINE_ROLLOUT.md
infrastructure/: Makefile
infrastructure/environments/dev/: backend.hcl  main.tf  outputs.tf  terraform.tfvars  variables.tf
infrastructure/environments/prod/: backend.hcl  main.tf  outputs.tf  terraform.tfvars  variables.tf
infrastructure/modules/ecr-repository/: main.tf  variables.tf
infrastructure/modules/ecs-cluster/: main.tf  outputs.tf  variables.tf
infrastructure/modules/ecs-execution-role/: main.tf  variables.tf
infrastructure/modules/ecs-service/: main.tf  outputs.tf  variables.tf
infrastructure/modules/ecs-task-role/: main.tf  variables.tf
infrastructure/modules/sqs-queue/: main.tf  outputs.tf  variables.tf
scripts/: dev-setup.sh  download_and_upload_ocr_models.py  download_and_upload_picture_description_model.py  run_benchmark.py  run_e2e_test.py  run_smoke_test.py
src/document_analysis/: __init__.py  __main__.py  bridge_main.py  job.py  main.py  runtime_env.py
src/document_analysis/aggregator/: loader.py  main.py  merger.py
src/document_analysis/common/: __init__.py  db.py  lease.py  models.py  outbox.py
src/document_analysis/config/: __init__.py  settings.py
src/document_analysis/partitioner/: main.py  splitter.py
src/document_analysis/services/: __init__.py  bedrock_chat_completions_transport.py  document_conversion.py  kafka_consumer.py  kafka_producer.py  local_picture_vlm_singleton.py  pdf_image_fallback.py  s3.py  s3_key_parser.py  sqs.py
src/document_analysis/telemetry/: otel_instrumentation.py
src/document_analysis/worker/: main.py
src/flash_events/: __init__.py  base.py  dlq.py  document.py
tests/: __init__.py  test_imports.py  test_pdf_image_fallback.py  test_sqs_kafka_bridge.py
