[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-analysis-microservice"
version = "0.1.0"
description = "Docling-based document analysis microservice for Flash (PDF, DOCX, PPTX, images)"
authors = [{ name = "AI-OWL", email = "aiteam@aiowl.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "docling>=2.0.0",
    "boto3>=1.34.0",
    "pydantic-settings>=2.5.0",
    "onnxruntime>=1.16.0",
    "aiokafka>=0.11.0",
    "structlog>=24.0.0",
    "pillow>=10.0.0",
    "pillow-heif>=0.18.0",
    "cairosvg>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.0",
    "pikepdf>=9.0.0",
    "opentelemetry-api~=1.42.0",
    "opentelemetry-sdk~=1.42.0",
    "opentelemetry-exporter-otlp-proto-http~=1.42.0",
    "opentelemetry-instrumentation-logging~=0.63b0",
    "opentelemetry-instrumentation-system-metrics~=0.63b0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/AI-OWL/document-analysis-microservice"
Repository = "https://github.com/AI-OWL/document-analysis-microservice"

[tool.hatch.build.targets.wheel]
packages = ["src/document_analysis"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "W",
    "B",
    "C4",
    "UP",
    "I",
    "ARG",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "ARG001",
    "ARG002",
]

[tool.ruff.lint.isort]
known-first-party = ["document_analysis"]

[tool.ruff.lint.per-file-ignores]
"src/document_analysis/services/document_conversion.py" = ["E402", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
